fixed cart visibility bug and introduced new removeMarketingItem function

--- a/styles.css
+++ b/styles.css
@@ -438,8 +438,8 @@ button.booths.booths-activator.v-btn.theme--light {
 .cart-container {
     position: relative;
     overflow-y: scroll;
-    min-height: 100px;
-    max-height: 600px;
+    height: 500px;
+    /* height: 600px; */
 }
 
 .cart {
